k8s/grafana-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana-server
  name: grafana-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/k8s-default: "true"
        io.kompose.service: grafana-server
    spec:
      containers:
        - image: IMAGE_TAG_GR
          name: grafana-server
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
