k8s/prometheus-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus-server
  name: prometheus-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/k8s-default: "true"
        io.kompose.service: prometheus-server
    spec:
      containers:
        - image: IMAGE_TAG_PR
          name: prometheus-server
          ports:
            - containerPort: 9090
              hostPort: 9090
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
