k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: carrental.modulcar.xyz
    kompose.service.type: nodeport
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.expose: carrental.modulcar.xyz
        kompose.service.type: nodeport
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/k8s-default: "true"
        io.kompose.service: ui
    spec:
      containers:
        - env:
            - name: APP_URL
              value: http://carrental.modulcar.xyz:8080/car-rental/api/
          image: IMAGE_TAG_UI
          name: ui
          ports:
            - containerPort: 3000
              hostPort: 80
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
