k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: carrental.modulcar.xyz
    kompose.service.type: nodeport
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
  namespace: default
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 3000
  selector:
    io.kompose.service: ui
  type: NodePort
status:
  loadBalancer: {}
