k8s/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: carrental.modulcar.xyz
    kompose.service.type: nodeport
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
  namespace: default
spec:
  rules:
    - host: carrental.modulcar.xyz
      http:
        paths:
          - backend:
              service:
                name: ui
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
